Bug fixes on mobile

--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -94,7 +94,10 @@ $hoverBreakMobile: 600px;
     display: flex;
     width: 100%;
     justify-content: space-between;
-    
+
+    @media (max-width: $hoverBreakMobile) {
+      flex-wrap: wrap;
+    }
   }
 
   
